main/default/objects/Market_Area__c/Market_Area__c.object-meta.xml
<CustomObject>
    <label>Market Area</label>
    <nameField>
        <label>Market Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>