main/default/objects/Market_Area__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>