main/default/objects/Market_Area__c/fields/ICCMarketAreaID__c.field-meta.xml
<CustomField>
    <fullName>ICCMarketAreaID__c</fullName>
    <label>ICCMarketAreaID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>