main/default/objects/Market_Area__c/fields/MarketAreaExternalID__c.field-meta.xml
<CustomField>
    <fullName>MarketAreaExternalID__c</fullName>
    <externalId>true</externalId>
    <label>MarketAreaExternalID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>