main/default/objects/Market_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ICCMarketAreaID__c</columns>
    <columns>NAME</columns>
    <columns>MarketAreaExternalID__c</columns>
    <columns>Expiration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>